--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Levels/TestLevels/BasicLevel.BasicLevel
 EditorStartupMap=/Game/Levels/TestLevels/BasicLevel.BasicLevel
 GameInstanceClass=/Game/System/BP_GameInstance.BP_GameInstance_C
+GlobalDefaultGameMode=/Script/FunctionalTesting.FunctionalTestGameMode
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
